farmOverflwo: Fixed log icon & time cell spacing. - Attack log entries removed. Added more: farm start/stop. - Updated translation texts/keys from 'paused' to 'stopped'.

--- a/src/modules/farm_overflow/assets/style.less
+++ b/src/modules/farm_overflow/assets/style.less
@@ -37,7 +37,12 @@
         .log-list {
             margin-bottom: 10px;
 
+            td.time {
+                padding: 0 10px;
+            }
+
             td {
+                white-space: nowrap;
                 text-align: center;
 
                 .village-link {
